# COMET_Prestudy

./: .gitignore  ENV_SETUP.md  README.md
scripts/analysis/: environment.yml  pyproject.toml
scripts/analysis/formal_analysis/mlab_analysis/: mlab_LDA.ipynb  mlab_multilabel.py
scripts/analysis/formal_analysis/opencellid_analysis/: opencellid_LDA.ipynb
scripts/analysis/formal_analysis/ripe_analysis/: ripe_LDA.ipynb
scripts/analysis/informal_analysis/: environment.yml
scripts/analysis/informal_analysis/reddit_analysis/: machine_learning.ipynb  ml_data_reformat_reddit.py  ml_data_reformat_twitter.py  reddit_LDA.ipynb  reddit_lda_script.py  train.csv
scripts/analysis/informal_analysis/twitter_analysis/: README.md  count_hashtags.py  count_unique_users.py  environment.yml  get_conversation_id.fish  get_conversation_id.py  ml_data_reformat_twitter.py  twitter_head_wordcloud_10.ipynb  twitter_relevance_filter.awk  vader_sentiment_analysis.ipynb
scripts/analysis/mlab_analysis/: mlab_LDA.ipynb  mlab_analysis.ipynb
scripts/analysis/opencellid_analysis/: opencellid_LDA.ipynb
scripts/analysis/ripe_analysis/: ripe_LDA.ipynb
scripts/collection/: google_groups_scrape.py  opencellid_scrape.py  pyproject.toml
scripts/collection/formal_scripts/: Scraper.py  google_groups_scrape.py  mlab_data_2017.tsv  mlab_data_testrun.csv  opencellid.tsv  opencellid_data_testrun.csv  output_data_FCC_DISQUS_01_2017.csv  output_data_RIPE_01_2017.tsv  output_data_mlab.tsv  output_data_mlab_01_2017.csv  output_data_ocellID_01_2017.tsv  pyproject.toml
scripts/collection/formal_scripts/docs/source/: BaseScraper.rst  GoogleGroupsScraper.rst  OpenCellIDScraper.rst  conf.py  index.rst  modules.rst
scripts/collection/formal_scripts/scripts/: BaseScraper.py  DisqusScraper.py  GoogleGroupsScraper.py  MlabScraper.py  OpenCellIDScraper.py  RIPEAtlasScraper.py
scripts/collection/formal_scripts/scripts/tests/: clean_keywords.txt  (+5 more)
scripts/collection/formal_scripts/tests/: ggroup_class_test.py  ggroup_selenium_test.py  ggroup_test.py  test_ggroup_class.py
scripts/collection/informal_scripts/: reddit.csv
scripts/collection/informal_scripts/Facebook Data Scraping Script/: clean_keywords.py  facebook_comma.csv  facebook_tab.csv  fb_scraping.py
scripts/collection/informal_scripts/NextDoor Data Scraping Script/: nextdoor_data.tsv
scripts/collection/informal_scripts/Reddit Data Scraping Script/: 2017_Flagstaff_results.csv  clean_keywords.txt  reddit_scraping.py
scripts/collection/informal_scripts/Twitter Data Scraping Script/: BaseScraper.py  TestTwitterScraper.sh  TwitterScraper.py  project_progression.md  pyproject.toml  twitter_scraper_Kylie_Edition_KE.py  twitter_scraper_Kylie_Edition_KE2.py
scripts/collection/informal_scripts/facebook_data_scraper/: desktop_fb.py  facebook_comma.csv  facebook_scraper.py  facebook_tab.csv  keywords.txt
scripts/collection/informal_scripts/nextdoor_data_scraper/: nextdoor_data_1.tsv  nextdoor_data_2.tsv  nextdoor_data_3.tsv  nextdoor_data_4.tsv  nextdoor_data_5.tsv  nextdoor_scraper.py  test.py
scripts/collection/informal_scripts/reddit_data_scraper/: analysis_sampler.py  clean_keywords.txt  count_posts.py  count_users.py  filter_reddit.py  reddit_scraper.py  reddit_scraping.py
scripts/collection/informal_scripts/twitter_data_scraper/: .TweetConversationScraper.sh.swp  Get_ConvID.sh  README.md  TweetArchiveScrape.sh  TweetConversationScraper.sh  get_conversations.fish  project_progression.md
scripts/collection/keywords/: testing_keywords.txt
scripts/collection/tests/: ggroup_test.py
(+2133 files in other folders)
