[tool.poetry]
name = "analysis_scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
nltk = "^3.7"
jupyter = "^1.0.0"
wordcloud = "^1.8.1"
matplotlib = "^3.5.2"
gensim = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
