[tool.poetry]
name = "analysis_scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.2.0"
pandas = "^1.4.3"
spacy = "^3.3.1"
numpy = "^1.23.0"
nltk = "^3.7"
jupyter = "^1.0.0"
pyLDAvis = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
