[tool.poetry]
name = "collection-scripts"
version = "0.1.0"
description = "gather discussion data from respective websites"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
