[tool.poetry]
name = "formal-collection-scripts"
version = "0.1.0"
description = "gather discussion data from respective formal websites for the CANIS Lab"
authors = ["Quinton Jasper <qjj2@nau.edu>", "Kylie Cook <Put your email here or something>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
Sphinx = "^4.5.0"
pydata-sphinx-theme = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
